[project]
name = "fakegrpc"
version = "0.1.0"
description = "A fake gRPC server generator for gRPC based microservices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "betterproto[compiler]==2.0.0b7",
  "grpclib==0.4.7",
  "python-dotenv",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest==7.4.0",
  "pytest-asyncio==0.21.1",
  "pytest-subtests",
  "black==23.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server", "tid"]

[tool.black]
line-length = 88
target-version = ['py312']
exclude = '''
(
  example/api
  | example/fakeservers
  | .venv
)
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["example/e2etest"]
